# chps0802_raytracer

./: .gitignore  README.md  benchmark.sh  clean.sh
v1/: CMakeLists.txt
v1/include/: sphere.hpp  vec3.hpp
v1/src/: main.cpp  ray.cpp  sphere.cpp  vec3.cpp
v2/: CMakeLists.txt
v2/include/: camera.hpp  hittable.hpp  hittable_list.hpp  ray.hpp  sphere.hpp  vec3.hpp
v2/src/: camera.cpp  hittable_list.cpp  main.cpp  sphere.cpp
v3/: CMakeLists.txt
v3/include/: camera.hpp  constantcolor.hpp  light.hpp  ray.hpp  sphere.hpp  vec3.hpp
v3/src/: hittable_list.cpp  main.cpp  sphere.cpp  vec3.cpp
v3/tests/: test_cpu.cpp
v3_cuda/: CMakeLists.txt
v3_cuda/include/: camera.hpp  hittable.hpp  hittable_list.hpp  kernels.cuh  lambertcolor.hpp  light.hpp  material.hpp  metal.hpp  ray.hpp  vec3.hpp
v3_cuda/src/: main.cu
v3_cuda/tests/: test_gpu.cu
